# vless-vpn-client

./: .env.example  .gitignore  ANDROID-BUILD.md  ANDROID-SETUP.md  ARCHITECTURE.md  AUTOSTART-FIX.md  AUTOSTART-SETUP.md  BACKUP-CHANNELS.md  CHANGELOG.md  CLAUDE-ACCESS.md  COMPLETE-GUIDE.md  CONTROLLER-MANUAL.md  DEPLOYMENT.md  DEVELOPMENT-PLAN.md  Dockerfile.api  EMERGENCY-HTTPS-FIX.md  ENCRYPTED-TRAFFIC.md  FAST-SCAN.md  FINAL-INSTALL.sh  FINAL-SUMMARY.md  FIREFOX-FIX.md  FIREFOX-PROXY.md  FIREFOX-НАСТРОЙКА.md  GIT-DEPLOYMENT.md  GOV-CHANNELS.md  GUI-CONTROL.md  GUI-INSTRUCTION.md  GUI-LAUNCH.md  INSTALL-SUMMARY.md  INSTRUCTION.md  LICENSE  LICENSE.md  PROFESSIONAL-VPN-PROMPT.md  PROMPT-CONFIG.md  PROMPT-README.md  QUICK-AUTOSTART.md  QUICK-INSTALL.md  QUICK-START-ULTIMATE.md  QUICKSTART.md  README-CLIENT.md  (+116 more)
.github/workflows/: android-build.yml  ci-cd.yml
core/: __init__.py  config_manager.py  config_parser.py  server_manager.py  system_proxy.py  xray_manager.py
data/: best_server.json  fast_servers.json  working_reality_servers.json
desktop-client/: package.json
desktop-client/src/: App.jsx
desktop-client/src-tauri/: tauri.conf.json
gui/: __init__.py  dialog.py  main_window.py  sources_dialog.py  theme.py
mobile-client/: PRODUCTION-BUILD.md  pubspec.yaml
mobile-client/android/: settings.gradle
mobile-client/android/app/: build.gradle  proguard-rules.pro
mobile-client/android/app/src/main/: AndroidManifest.xml
mobile-client/android/app/src/main/kotlin/com/example/vless_vpn/: MainActivity.kt
mobile-client/android/app/src/main/res/values/: strings.xml  styles.xml
mobile-client/lib/: main.dart
mobile-client/lib/models/: server.dart
mobile-client/lib/providers/: server_provider.dart  vpn_provider.dart
mobile-client/lib/screens/: home_screen.dart  servers_screen.dart  settings_screen.dart
mobile-client/lib/widgets/: connection_status.dart  server_card.dart  server_list_tile.dart
scripts/: install-from-github.sh  update-from-github.sh
xray/: config.json
